--- a/README.pod
+++ b/README.pod
@@ -2,14 +2,14 @@
 
 =head1 名前
 
-Ringo Wiki(りんごウィキ) - 開発が始まったばかり
+リンゴウィキ(Ringo Wiki) - 開発が始まったばかり
 
 =head2 説明
 
-リンゴウィキはインストールが簡単なWikiです。
+リンゴウィキはPerlで書かれたWikiです。
 
 Perl 5.10.1以上の環境であれば、Windows, Linux/Unix, Mac OS X
-など多くのOSで利用が可能です。
+など多くのOSで利用が可能です。インストールも簡単です。
 
 リンゴWikiはPerlで書かれているので、Perlが得意な人にとっては
 とてもよいWikiでしょう。データベースはSQLiteを利用しています。
