--- a/README.pod
+++ b/README.pod
@@ -34,7 +34,7 @@ Perl 5.10.1以上の環境であれば、Windows, Linux/Unix, Mac OS X
 
   ./hypnotoad
 
-アプリケーションがバックエンドで起動します。
+アプリケーションがバックグラウンドで起動します。
 ポート番号はデフォルトでC<10001>です。
 以下のアドレスでアプリケーションにアクセスすることができます。
 
@@ -58,7 +58,7 @@ C<--stop>オプションで停止することができます。
   set MOJO_MODE=production
   start perl script/portablebbs daemon --listen=http://*:10001
 
-もしバックエンドで実行したい場合は、ウインドウズのサービスなどに
+もしバックグラウンドで実行したい場合は、ウインドウズのサービスなどに
 登録してください。
 
 =cut
