--- a/README.pod
+++ b/README.pod
@@ -17,6 +17,12 @@ Perl 5.10.1以上の環境であれば、Windows, Linux/Unix, Mac OS X
 いくつかのモジュールをインストールします。
 
   perl cpanm -l extlib Module::CoreList
+  perl t/module.t list | perl -Iextlib/lib/perl5 cpanm -n -L extlib
+
+もしいくつかのモジュールのインストールを失敗した場合に
+原因を解決してから再びモジュールをインストール
+するには次のコマンドが便利でしょう。
+
   perl t/module.t list --fail | perl -Iextlib/lib/perl5 cpanm -n -L extlib
 
 =head1 テスト
