--- a/README
+++ b/README
@@ -36,7 +36,7 @@
 
   起動
 
-      ./hypnotoad
+      ./ringowiki
 
     アプリケーションがバックグラウンドで起動します。
     ポート番号はデフォルトで10001です。
@@ -51,6 +51,6 @@
 
   停止
 
-      ./hypnotoad --stop
+      ./ringowiki --stop
 
     --stopオプションで停止することができます。
